# autonomous-navigation-uco

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: amcl_uco.launch  move_base_uco.launch  rplidar_uco.launch
launch/include/: laser_static_tf.launch
launch/sim/: stage_nav.launch
maps/: map.pgm  map.yaml  map_room_only.pgm  map_room_only.yaml
poi/: doors.yaml  points_of_interest.yaml
scripts/: door_costmap_updater.py  door_state_publisher.py  dynamic_costmap_updater.py  presence_detector.py  send_nav_goal.py
simulation/: README.md  turtlebot.world
