<?xml version="1.0"?>
<package format="2">
  <name>autonomous_navigation_uco</name>
  <version>0.1.0</version>
  <description>
    Autonomous indoor navigation for TurtleBot2 (Kobuki + RPLidar A2M8).
    Universidad de Cordoba -- Advanced Informatics Research Group.
  </description>
  <maintainer email="leonel.valdez@uco.es">Alexis Leonel Valdez Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>costmap_2d</exec_depend>

  <export></export>
</package>
